# pnmixer

./: .travis.yml  ChangeLog  HACKING.md  Makefile.am  README.md  autogen.sh  configure.ac
data/: popup_window-gtk2.xml  popup_window-gtk3.xml
data/ui/: Makefile.am  about-gtk2.glade  about-gtk3.glade  hotkey-dialog-gtk2.glade  hotkey-dialog-gtk3.glade  popup-menu-gtk2.glade  popup-menu-gtk3.glade  popup-window-horizontal-gtk2.glade  popup-window-horizontal-gtk3.glade  popup-window-vertical-gtk2.glade  popup-window-vertical-gtk3.glade  popup_window-gtk3.glade  prefs-dialog-gtk2.glade  prefs-dialog-gtk3.glade  prefs-gtk2.glade  prefs-gtk3.glade  prefs-window-gtk2.glade  prefs-window-gtk3.glade
po/: Makefile.in.in  POTFILES.in  de.po  fr.po  it.po  ru.po  zh_CN.po
src/: Makefile.am  alsa-card.c  alsa-card.h  alsa.c  alsa.h  audio.c  audio.h  callbacks.c  callbacks.h  hotkey.c  hotkey.h  hotkeys.c  hotkeys.h  main.c  main.h  notif.c  notif.h  notify.c  notify.h  prefs.c  prefs.h  support-intl.c  support-intl.h  support-log.c  support-log.h  support-ui.c  support-ui.h  support.c  support.h  ui-about-dialog.c  ui-about-dialog.h  ui-hotkey-dialog.c  ui-hotkey-dialog.h  ui-popup-menu.c  ui-popup-menu.h  ui-popup-window.c  ui-popup-window.h  ui-prefs-dialog.c  ui-prefs-dialog.h  ui-prefs-window.c  (+7 more)
